--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,11 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: '1.20.1'
+      - name: Install Task
+        uses: arduino/setup-task@v1
+        with:
+          repo-token: "${{ secrets.GITHUB_TOKEN }}"
       - name: run unit tests
-        run: make test
+        run: task test
       - name: build a local artifact
-        run: make build
+        run: task build
