--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,8 +16,12 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: '1.20.1'
+      - name: Install Task
+        uses: arduino/setup-task@v1
+        with:
+          repo-token: "${{ secrets.GITHUB_TOKEN }}"
       - name: Compile all versions
-        run: make release VERSION=${GITHUB_REF_NAME}
+        run: task VERSION=${GITHUB_REF_NAME}
       - name: Generate SBOM
         uses: CycloneDX/gh-gomod-generate-sbom@v2
         with:
