--- a/taskfile.yml
+++ b/taskfile.yml
@@ -73,25 +73,25 @@ tasks:
 
   build-linux:
     desc: "Builds a linux artifact"
-    for: [ amd64, arm64 ]
     cmds:
-      - GOOS=$GOOS GOARCH={{ .ITEM }} go build -o {{ .build_dir }}/linux-{{ .ITEM }}/{{ .bin_name }} {{ .app_repo }}/cmd
+      - for: [ amd64, arm64 ]
+        cmd: GOOS=$GOOS GOARCH={{ .ITEM }} go build -o {{ .build_dir }}/linux-{{ .ITEM }}/{{ .bin_name }} {{ .app_repo }}/cmd
     env:
       GOOS: linux
 
   build-windows:
     desc: "Builds a Windows artifact"
-    for: [ amd64, arm64 ]
     cmds:
-      - GOOS=$GOOS GOARCH={{ .ITEM }} go build -o {{ .build_dir }}/windows-{{ .ITEM }}/{{ .bin_name }}.exe {{ .app_repo }}/cmd
+      - for: [ amd64, arm64 ]
+        cmd: GOOS=$GOOS GOARCH={{ .ITEM }} go build -o {{ .build_dir }}/windows-{{ .ITEM }}/{{ .bin_name }}.exe {{ .app_repo }}/cmd
     env:
       GOOS: windows
 
   build-darwin:
     desc: "Builds a MacOS artifact"
-    for: [ amd64, arm64 ]
     cmds:
-      - GOOS=darwin GOARCH={{ .ITEM }} go build -o {{ .build_dir }}/darwin-{{ .ITEM }}/{{ .bin_name }} {{ .app_repo }}/cmd
+      - for: [ amd64, arm64 ]
+        cmd: GOOS=darwin GOARCH={{ .ITEM }} go build -o {{ .build_dir }}/darwin-{{ .ITEM }}/{{ .bin_name }} {{ .app_repo }}/cmd
     env:
       GOOS: darwin
 
@@ -101,27 +101,27 @@ tasks:
 
   release-linux:
     desc: "Creates a linux releasable artifact"
-    for: [ amd64, arm64 ]
     cmds:
-      - tar cfz {{ .dist_dir }}/{{ .bin_name }}_{{ .VERSION }}_linux_{{ .ITEM }}.tar.gz -C {{ .build_dir }}/linux-{{ .ITEM }} .
+      - for: [ amd64, arm64 ]
+        cmd: tar cfz {{ .dist_dir }}/{{ .bin_name }}_{{ .VERSION }}_linux_{{ .ITEM }}.tar.gz -C {{ .build_dir }}/linux-{{ .ITEM }} .
     requires:
       vars:
         - VERSION
 
   release-windows:
     desc: "Creates a Windows releasable artifact"
-    for: [ amd64, arm64 ]
     cmds:
-      - tar cfz {{ .dist_dir }}/{{ .bin_name }}_{{ .VERSION }}_windows_{{ .ITEM }}.tar.gz -C {{ .build_dir }}/windows-{{ .ITEM }} .
+      - for: [ amd64, arm64 ]
+        cmd: tar cfz {{ .dist_dir }}/{{ .bin_name }}_{{ .VERSION }}_windows_{{ .ITEM }}.tar.gz -C {{ .build_dir }}/windows-{{ .ITEM }} .
     requires:
       vars:
         - VERSION
 
   release-darwin:
     desc: "Creates a MacOS releasable artifact"
-    for: [ amd64, arm64 ]
     cmds:
-      - tar cfz {{ .dist_dir }}/{{ .bin_name }}_{{ .VERSION }}_darwin_{{ .ITEM }}.tar.gz -C {{ .build_dir }}/darwin-{{ .ITEM }} .
+      - for: [ amd64, arm64 ]
+        cmd: tar cfz {{ .dist_dir }}/{{ .bin_name }}_{{ .VERSION }}_darwin_{{ .ITEM }}.tar.gz -C {{ .build_dir }}/darwin-{{ .ITEM }} .
     requires:
       vars:
         - VERSION
